fixed hero text and buttons position on mobile, to center them

--- a/style/style.css
+++ b/style/style.css
@@ -135,7 +135,7 @@ img {
   text-align: center;
   width: 100%;
   position: absolute;
-  bottom: 40%;
+  top: 20%;
   display: flex;
   flex-direction: column;
   align-items: center;
